--- a/src/main/resources/br/com/washii/view/layout/negocio-layout.fxml
+++ b/src/main/resources/br/com/washii/view/layout/negocio-layout.fxml
@@ -126,10 +126,6 @@
          </children></VBox>
    </left>
    <center>
-      <Label text="DASHBOARD" BorderPane.alignment="CENTER">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
+      <fx:include fx:id="homeNegocio" source="../home/home-negocio.fxml"/>
    </center>
 </BorderPane>
