--- a/src/main/resources/br/com/washii/view/agendamentos/agendamento-card.fxml
+++ b/src/main/resources/br/com/washii/view/agendamentos/agendamento-card.fxml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxWidth="350.0" minWidth="300.0" spacing="10.0" styleClass="agendamento-card" stylesheets="@style.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seu.pacote.AgendamentoCardController">
+<VBox maxWidth="350.0" minWidth="300.0" spacing="10.0" styleClass="agendamento-card" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.agendamentos.AgendamentoCardController">
    <children>
       <HBox alignment="CENTER_LEFT" spacing="10.0">
          <children>
             <Label fx:id="lblNumeroAgendamento" styleClass="badge-id" text="AGENDAMENTO #1" />
-            <Label fx:id="lblStatus" styleClass="badge-status-pendente" text="PENDENTE" />
+            <Region HBox.hgrow="ALWAYS" />
+            <Label fx:id="lblStatus" text="PENDENTE">
+               <styleClass>
+                  <String fx:value="badge-status" />
+                  <String fx:value="status-pendente" />
+               </styleClass></Label>
          </children>
       </HBox>
       <VBox alignment="CENTER">
@@ -56,9 +63,10 @@
       </VBox>
       <Separator />
 
-      <HBox alignment="CENTER" spacing="15.0">
+      <HBox alignment="CENTER" spacing="10.0">
          <children>
             <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#handleCancelar" prefHeight="35.0" prefWidth="130.0" styleClass="btn-cancelar" text="CANCELAR" />
+            <Region HBox.hgrow="ALWAYS" />
             <Button fx:id="btnIniciar" mnemonicParsing="false" onAction="#handleIniciar" prefHeight="35.0" prefWidth="130.0" styleClass="btn-iniciar" text="INICIAR" />
          </children>
          <VBox.margin>
