--- a/src/main/resources/br/com/washii/view/perfil/perfil-usuario.fxml
+++ b/src/main/resources/br/com/washii/view/perfil/perfil-usuario.fxml
@@ -1,173 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.TextFlow?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<ScrollPane fitToWidth="true" prefHeight="650.0" prefWidth="850.0" styleClass="background-transparente" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane fitToWidth="true" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.perfil.PerfilClienteController">
    <content>
-      <VBox alignment="TOP_CENTER" styleClass="background-transparente">
+      <VBox spacing="40.0" style="-fx-background-color: transparent;">
          <children>
-            <VBox maxWidth="800.0" spacing="25.0" styleClass="background-transparente">
+            <HBox alignment="CENTER_LEFT" spacing="20.0">
                <children>
-                  
-                  <VBox prefHeight="0.0" prefWidth="816.0" spacing="5.0">
+                  <StackPane fx:id="paneFoto" onMouseClicked="#handleSelecionarFoto">
                      <children>
-                        <Label styleClass="texto-titulo" text="Meu Perfil" textFill="#333333">
+                        <Circle fx:id="circleFoto" fill="#dadada" radius="50.0" stroke="#53bfe7" strokeType="INSIDE" strokeWidth="2.0" />
+                        <FontIcon fx:id="iconCamera" iconColor="WHITE" iconLiteral="mdi2c-camera-outline" iconSize="32" visible="false" />
+                     </children>
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                  </StackPane>
+                  <VBox alignment="CENTER_LEFT" spacing="5.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <TextField fx:id="txtNomeCliente" editable="false" promptText="Nome do Cliente" styleClass="field-titulo">
                            <font>
-                              <Font name="System Bold" size="24.0" />
+                              <Font name="System Bold" size="18.0" />
                            </font>
-                        </Label>
-                        <Label styleClass="texto-comum" text="Visualize seus dados cadastrais" />
+                        </TextField>
+                        <TextField fx:id="txtEmail" editable="false" promptText="contato@washii.com.br" styleClass="field-dados" />
+                        <TextField fx:id="txtTelefone" editable="false" layoutX="10.0" layoutY="71.0" promptText="(00) 00000-0000" styleClass="field-dados" />
                      </children>
                   </VBox>
-      
-                  <VBox styleClass="container-generic">
+                  <VBox alignment="CENTER" minWidth="-Infinity" spacing="20.0">
                      <children>
-                        
-                        <HBox alignment="CENTER_LEFT" spacing="30.0">
-                           <children>
-                              
-                              <VBox alignment="TOP_CENTER" spacing="10.0">
-                                 <children>
-                                    <VBox alignment="CENTER" style="-fx-border-color: #dddddd; -fx-border-radius: 5; -fx-border-style: solid;">
-                                        <children>
-                                            <ImageView fx:id="imgPerfil" fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
-                                            <Label text="Sem Foto" textFill="#bbbbbb">
-                                                <font><Font size="10.0" /></font>
-                                            </Label>
-                                        </children>
-                                        <padding><Insets bottom="2.0" left="2.0" right="2.0" top="2.0" /></padding>
-                                    </VBox>
-                                 </children>
-                              </VBox>
-
-                              <GridPane hgap="20.0" vgap="15.0" HBox.hgrow="ALWAYS">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <children>
-                                    <VBox spacing="5.0">
-                                       <children>
-                                          <Label styleClass="texto-comum" text="Nome Completo" textFill="#555555" />
-                                          <TextField fx:id="txtNome" disable="true" prefHeight="35.0" style="-fx-background-radius: 5;" text="Placeholder da Silva" />
-                                       </children>
-                                    </VBox>
-                                    <VBox spacing="5.0" GridPane.rowIndex="1">
-                                       <children>
-                                          <Label styleClass="texto-comum" text="E-mail" textFill="#555555" />
-                                          <TextField fx:id="txtEmail" disable="true" prefHeight="35.0" style="-fx-background-radius: 5;" text="apreciadordelavagem@gmail.com" />
-                                       </children>
-                                    </VBox>
-                                 </children>
-                              </GridPane>
-                           </children>
-                           <padding>
-                              <Insets bottom="10.0" />
-                           </padding>
-                        </HBox>
-
-                        <Line endX="700.0" stroke="#eeeeee" strokeWidth="1.0">
-                           <VBox.margin>
-                              <Insets bottom="15.0" top="15.0" />
-                           </VBox.margin>
-                        </Line>
-
-                        <Label styleClass="texto-titulo" text="Endereço">
-                           <font>
-                              <Font name="System Bold" size="16.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets bottom="15.0" />
-                           </VBox.margin>
-                        </Label>
-
-                        <GridPane hgap="20.0" vgap="15.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="ALWAYS" percentWidth="70.0" />
-                            <ColumnConstraints hgrow="ALWAYS" percentWidth="30.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              
-                              <VBox spacing="5.0">
-                                 <children>
-                                    <Label styleClass="texto-comum" text="Logradouro" textFill="#555555" />
-                                    <TextField fx:id="txtLogradouro" disable="true" prefHeight="35.0" style="-fx-background-radius: 5;" text="Ponte do Baralho" />
-                                 </children>
-                              </VBox>
-                              
-                              <VBox spacing="5.0" GridPane.columnIndex="1">
-                                 <children>
-                                    <Label styleClass="texto-comum" text="Número" textFill="#555555" />
-                                    <TextField fx:id="txtNumero" disable="true" prefHeight="35.0" style="-fx-background-radius: 5;" text="123" />
-                                 </children>
-                              </VBox>
-                              
-                              <VBox spacing="5.0" GridPane.rowIndex="1">
-                                 <children>
-                                    <Label styleClass="texto-comum" text="Bairro" textFill="#555555" />
-                                    <TextField fx:id="txtBairro" disable="true" prefHeight="35.0" style="-fx-background-radius: 5;" text="Bayeux" />
-                                 </children>
-                              </VBox>
-                              
-                              <VBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                 <children>
-                                    <Label styleClass="texto-comum" text="CEP" textFill="#555555" />
-                                    <TextField fx:id="txtCep" disable="true" prefHeight="35.0" style="-fx-background-radius: 5;" text="58400-666" />
-                                 </children>
-                              </VBox>
-                           </children>
-                        </GridPane>
-
-                        <HBox alignment="CENTER_RIGHT" spacing="15.0">
-                           <children>
-                              
-                              <TextFlow fx:id="avisoContainer" visible="false" HBox.hgrow="ALWAYS" />
-                              
-                              <Button fx:id="btnEditar" prefHeight="35.0" prefWidth="120.0" styleClass="button-primary" text="Editar Dados" />
-
-                              <HBox fx:id="containerBotoesEdicao" alignment="CENTER_RIGHT" managed="false" spacing="15.0" visible="false">
-                                 <children>
-                                    <Button prefHeight="35.0" prefWidth="100.0" styleClass="button-secondary" text="Cancelar" />
-                                    <Button prefHeight="35.0" prefWidth="150.0" styleClass="button-primary" text="Salvar" />
-                                 </children>
-                              </HBox>
-
-                           </children>
-                           <VBox.margin>
-                              <Insets top="30.0" />
-                           </VBox.margin>
-                        </HBox>
-
+                        <Button fx:id="btnEditar" mnemonicParsing="false" onAction="#handleAlternarEdicao" prefWidth="100.0" styleClass="button-primary" text="Editar">
+                           <graphic>
+                              <FontIcon iconColor="WHITE" iconLiteral="mdi2p-pencil" />
+                           </graphic>
+                        </Button>
+                        <Button fx:id="btnCancelar" cancelButton="true" mnemonicParsing="false" onAction="#handleCancelarEdicao" prefWidth="100.0" styleClass="button-secondary" text="Cancelar" visible="false" />
                      </children>
-                     <padding>
-                        <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-                     </padding>
                   </VBox>
+               </children>
+            </HBox>
+
+            <VBox spacing="15.0" styleClass="card-perfil">
+               <children>
+                  <Label styleClass="section-header" text="ENDEREÇO COMPLETO" />
+                  <GridPane hgap="20.0" vgap="15.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" />
+                      <ColumnConstraints hgrow="SOMETIMES" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" prefWidth="80.0" />
+                    </columnConstraints>
+                    <children>
+                        <VBox spacing="5.0">
+                           <children>
+                              <Label styleClass="label-legenda" text="CEP" />
+                              <TextField fx:id="txtCep" editable="false" promptText="00000-000" styleClass="field-dados" />
+                           </children>
+                        </VBox>
+                        <VBox spacing="5.0" GridPane.rowIndex="1">
+                           <children>
+                              <Label styleClass="label-legenda" text="Estado" />
+                              <TextField fx:id="txtEstado" editable="false" promptText="Seu estado" styleClass="field-dados" />
+                           </children>
+                        </VBox>
+                        <VBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <children>
+                              <Label styleClass="label-legenda" text="Rua" />
+                              <TextField fx:id="txtRua" editable="false" promptText="Sua rua" styleClass="field-dados" />
+                           </children>
+                        </VBox>
+                        <VBox spacing="5.0" GridPane.columnIndex="1">
+                           <children>
+                              <Label styleClass="label-legenda" text="Cidade" />
+                              <TextField fx:id="txtCidade" editable="false" promptText="Sua cidade" styleClass="field-dados" />
+                           </children>
+                        </VBox>
+                        <VBox spacing="5.0" GridPane.columnIndex="2">
+                           <children>
+                              <Label styleClass="label-legenda" text="Bairro" />
+                              <TextField fx:id="txtBairro" editable="false" promptText="Seu bairro" styleClass="field-dados" />
+                           </children>
+                        </VBox>
+                        <VBox spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                           <children>
+                              <Label styleClass="label-legenda" text="Número" />
+                              <TextField fx:id="txtNumero" editable="false" promptText="Nº da casa" styleClass="field-dados" />
+                           </children>
+                        </VBox>
+                    </children>
+                     <rowConstraints>
+                        <RowConstraints />
+                        <RowConstraints />
+                     </rowConstraints>
+                  </GridPane>
+               </children>
+            </VBox>
+
+            <VBox spacing="15.0" styleClass="card-perfil">
+               <children>
+                  <TextFlow fx:id="containerAviso" visible="false" />
                </children>
             </VBox>
          </children>
          <padding>
-            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+            <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
          </padding>
       </VBox>
    </content>
