implementa card de agendamento para visualização do cliente

--- a/src/main/resources/br/com/washii/style/componentes.css
+++ b/src/main/resources/br/com/washii/style/componentes.css
@@ -279,6 +279,7 @@
     -fx-background-color: #1E8449;
 }
 
+/* --- Card de agendamento para negocio --- */
 /* Card Principal */
 .agendamento-card {
     -fx-background-color: white;
@@ -328,7 +329,7 @@
     -fx-font-size: 11px;
 }
 
-.status-pendente {
+.status-em-andamento {
     -fx-background-color: -fx-color-pendente;
 }
 
