--- a/src/main/resources/br/com/washii/view/layout/cliente-layout.fxml
+++ b/src/main/resources/br/com/washii/view/layout/cliente-layout.fxml
@@ -73,16 +73,7 @@
             <HBox fx:id="navAgendamentos" alignment="CENTER_LEFT" focusTraversable="true" onMouseClicked="#handleNavClick" spacing="10.0" styleClass="nav-container">
                <children>
                   <FontIcon iconLiteral="mdi2c-calendar-blank" iconSize="18" styleClass="icon" />
-                  <Label text="Agendamentos" />
-               </children>
-               <padding>
-                  <Insets bottom="10.0" top="10.0" />
-               </padding>
-            </HBox>
-            <HBox fx:id="navHistorico" alignment="CENTER_LEFT" focusTraversable="true" onMouseClicked="#handleNavClick" spacing="10.0" styleClass="nav-container">
-               <children>
-                  <FontIcon iconLiteral="mdi2l-list-box" iconSize="18" styleClass="icon" />
-                  <Label text="Historico" />
+                  <Label text="Meus Agendamentos" />
                </children>
                <padding>
                   <Insets bottom="10.0" top="10.0" />
